[package]
name = "sequora-wallet"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sqrwallet"
path = "src/main.rs"

[dependencies]
fips204 = "0.4"
sha2 = "0.10"
bech32 = "0.9"
ureq = { version = "2", features = ["json"] }
serde_json = "1"
hex = "0.4"
cosmos-sdk-proto = "0.26"
prost = "0.13"
base64 = "0.22"
argon2 = "0.5"
chacha20poly1305 = "0.10"
getrandom = "0.2"
tiny_http = "0.12"
zeroize = "1"
bip39 = "2"
