[package]
name = "sequora-wallet"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sqrwallet"
path = "src/main.rs"

[dependencies]
# Crypto/seed-handling crates are PINNED to exact versions: a `cargo update` must
# not silently pull an unvetted patch into the signing binary. Bump only via a
# reviewed change. (audit LOW: floating caret ranges on security-critical crates)
fips204 = "=0.4.6"
argon2 = "=0.5.3"
chacha20poly1305 = "=0.10.1"
bip39 = { version = "=2.2.2", features = ["zeroize"] }
sha2 = "0.10"
bech32 = "0.9"
ureq = { version = "2", features = ["json"] }
serde_json = "1"
hex = "0.4"
cosmos-sdk-proto = "0.26"
prost = "0.13"
base64 = "0.22"
getrandom = "0.2"
tiny_http = "0.12"
zeroize = "1"
rpassword = "7"
